@startuml
title Genetic Planner — Generic Domain Model

skinparam classAttributeIconSize 0
skinparam linetype ortho

' =========================================================
' Planning Problem
' =========================================================

class PlanningProblem {
    +id: String
    +name: String
    +templateType: String?
}

class PlanningHorizon {
    +start: LocalDateTime
    +end: LocalDateTime
}

class ResourceType {
    +id: String
    +name: String
}

class Resource {
    +id: String
    +name: String
    +typeId: String
    +attributes: Map<String, String>
}

class Activity {
    +id: String
    +name: String
    +type: String?
    +allowedTimeSlotIds: Set<String>?
    +allowedLocationIds: Set<String>?
    +requiredLocationCapacity: Int?
    +attributes: Map<String, String>
}

class ResourceRequirement {
    +id: String
    +resourceTypeId: String
    +quantity: Int
    +candidateResourceIds: Set<String>?
}

class TimeSlot {
    +id: String
    +start: LocalDateTime
    +end: LocalDateTime
    +label: String?
}

class Location {
    +id: String
    +name: String
    +type: String?
    +capacity: Int?
    +attributes: Map<String, String>
}


' =========================================================
' Constraint Model
' =========================================================

interface Constraint {
    +id: String
    +name: String
    +type: ConstraintType
    +weight: Double
    +evaluate(schedule: Schedule): ConstraintResult
}

enum ConstraintType {
    HARD
    SOFT
}

class ConstraintResult {
    +constraintId: String
    +type: ConstraintType
    +violationDetails: List<ConstraintViolation>
    +weight: Double
    --
    +violations: Int
    +rawPenalty: Double
    +weightedPenalty: Double
}

class ConstraintViolation {
    +message: String
    +penalty: Double
    +relatedEntityIds: Set<String>
}


' =========================================================
' Schedule
' =========================================================

class Schedule {
    +planningProblemId: String
    +assignments: List<Assignment>
}

class Assignment {
    +activityId: String
    +timeSlotId: String
    +resourceAssignments: Map<String, List<String>>
    +locationId: String?
}


' =========================================================
' Planning Problem Relationships
' =========================================================

PlanningProblem "1" *-- "1" PlanningHorizon
PlanningProblem "1" *-- "0..*" ResourceType
PlanningProblem "1" *-- "0..*" Resource
PlanningProblem "1" *-- "0..*" Activity
PlanningProblem "1" *-- "0..*" TimeSlot
PlanningProblem "1" *-- "0..*" Location
PlanningProblem "1" *-- "0..*" Constraint

Activity "1" *-- "0..*" ResourceRequirement


' =========================================================
' Reference Relationships
' =========================================================

Resource ..> ResourceType : typeId

ResourceRequirement ..> ResourceType : resourceTypeId
ResourceRequirement ..> Resource : candidateResourceIds

Activity ..> TimeSlot : allowedTimeSlotIds
Activity ..> Location : allowedLocationIds

Constraint --> ConstraintType : type
Constraint ..> Schedule : evaluates
Constraint ..> ConstraintResult : produces

ConstraintResult --> ConstraintType : type
ConstraintResult "1" *-- "0..*" ConstraintViolation


' =========================================================
' Schedule Relationships
' =========================================================

Schedule "1" *-- "0..*" Assignment

Schedule ..> PlanningProblem : planningProblemId

Assignment ..> Activity : activityId
Assignment ..> TimeSlot : timeSlotId
Assignment ..> ResourceRequirement : resourceAssignments keys
Assignment ..> Resource : resourceAssignments values
Assignment ..> Location : locationId


' =========================================================
' Notes
' =========================================================

note right of PlanningProblem
  Root of the generic planning domain.

  templateType is application/template
  metadata only.

  The Genetic Engine must never branch
  on templateType.
end note

note right of Activity
  One Activity represents one atomic
  schedulable unit.

  One Activity = one genetic decision.

  Each Activity produces exactly one
  Assignment in a complete Schedule.
end note

note right of ResourceRequirement
  quantity represents the exact number
  of distinct Resources required.

  candidateResourceIds:
  null      = unrestricted
  empty set = explicitly none
end note

note right of Activity
  allowedTimeSlotIds / allowedLocationIds:

  null      = unrestricted
  empty set = explicitly none
end note

note right of Location
  capacity is intrinsic Location data.

  Activity.requiredLocationCapacity
  defines the required capacity.

  Sufficiency is evaluated by
  LocationCapacityConstraint.
end note

note bottom of Assignment
  resourceAssignments maps:

  ResourceRequirement.id
          ->
  List<Resource.id>
end note

note bottom of Schedule
  Schedule contains planning decisions only.

  Fitness, feasibility, penalties,
  constraint results and execution statistics
  belong to evaluation / OptimizationResult.
end note

note bottom of Constraint
  Constraints remain independent
  from Jenetics.

  HARD constraints affect feasibility.
  HARD and SOFT constraints contribute
  weighted penalties to fitness.
end note


' =========================================================
' Domain Boundary
' =========================================================

package "Outside Core Domain" <<Rectangle>> {
    class "Planning Templates" as Templates
    class "Genetic Engine" as GeneticEngine
    class "Persistence Adapters" as Persistence
}

Templates ..> PlanningProblem : creates
GeneticEngine ..> PlanningProblem : consumes
GeneticEngine ..> Schedule : produces
Persistence ..> PlanningProblem : maps

@enduml